--- a/ui/LoginForm.ui
+++ b/ui/LoginForm.ui
@@ -13,6 +13,10 @@
   <property name="windowTitle">
    <string>Login</string>
   </property>
+  <property name="windowIcon">
+   <iconset>
+    <normaloff>../images/csuLogo.png</normaloff>../images/csuLogo.png</iconset>
+  </property>
   <widget class="QTextEdit" name="passwordField">
    <property name="geometry">
     <rect>
@@ -21,6 +25,15 @@
      <width>221</width>
      <height>31</height>
     </rect>
+   </property>
+   <property name="acceptDrops">
+    <bool>false</bool>
+   </property>
+   <property name="verticalScrollBarPolicy">
+    <enum>Qt::ScrollBarAlwaysOff</enum>
+   </property>
+   <property name="horizontalScrollBarPolicy">
+    <enum>Qt::ScrollBarAlwaysOff</enum>
    </property>
   </widget>
   <widget class="QTextEdit" name="usernameField">
@@ -31,6 +44,21 @@
      <width>221</width>
      <height>31</height>
     </rect>
+   </property>
+   <property name="acceptDrops">
+    <bool>false</bool>
+   </property>
+   <property name="statusTip">
+    <string/>
+   </property>
+   <property name="undoRedoEnabled">
+    <bool>false</bool>
+   </property>
+   <property name="lineWrapMode">
+    <enum>QTextEdit::NoWrap</enum>
+   </property>
+   <property name="lineWrapColumnOrWidth">
+    <number>1</number>
    </property>
   </widget>
   <widget class="QPushButton" name="loginButton">
