--- a/ui/Main.ui
+++ b/ui/Main.ui
@@ -25,15 +25,27 @@
     <property name="geometry">
      <rect>
       <x>480</x>
-      <y>520</y>
+      <y>510</y>
       <width>511</width>
       <height>192</height>
      </rect>
+    </property>
+    <property name="minimumSize">
+     <size>
+      <width>511</width>
+      <height>0</height>
+     </size>
+    </property>
+    <property name="sizeAdjustPolicy">
+     <enum>QAbstractScrollArea::AdjustToContentsOnFirstShow</enum>
     </property>
     <property name="showGrid">
      <bool>true</bool>
     </property>
     <property name="wordWrap">
+     <bool>true</bool>
+    </property>
+    <property name="cornerButtonEnabled">
      <bool>true</bool>
     </property>
     <attribute name="verticalHeaderHighlightSections">
