--- a/ui/LoginForm.ui
+++ b/ui/LoginForm.ui
@@ -17,50 +17,6 @@
    <iconset>
     <normaloff>../images/csuLogo.png</normaloff>../images/csuLogo.png</iconset>
   </property>
-  <widget class="QTextEdit" name="passwordField">
-   <property name="geometry">
-    <rect>
-     <x>250</x>
-     <y>170</y>
-     <width>221</width>
-     <height>31</height>
-    </rect>
-   </property>
-   <property name="acceptDrops">
-    <bool>false</bool>
-   </property>
-   <property name="verticalScrollBarPolicy">
-    <enum>Qt::ScrollBarAlwaysOff</enum>
-   </property>
-   <property name="horizontalScrollBarPolicy">
-    <enum>Qt::ScrollBarAlwaysOff</enum>
-   </property>
-  </widget>
-  <widget class="QTextEdit" name="usernameField">
-   <property name="geometry">
-    <rect>
-     <x>250</x>
-     <y>100</y>
-     <width>221</width>
-     <height>31</height>
-    </rect>
-   </property>
-   <property name="acceptDrops">
-    <bool>false</bool>
-   </property>
-   <property name="statusTip">
-    <string/>
-   </property>
-   <property name="undoRedoEnabled">
-    <bool>false</bool>
-   </property>
-   <property name="lineWrapMode">
-    <enum>QTextEdit::NoWrap</enum>
-   </property>
-   <property name="lineWrapColumnOrWidth">
-    <number>1</number>
-   </property>
-  </widget>
   <widget class="QPushButton" name="loginButton">
    <property name="geometry">
     <rect>
@@ -150,6 +106,26 @@
    </property>
    <property name="text">
     <string/>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="usernameField">
+   <property name="geometry">
+    <rect>
+     <x>250</x>
+     <y>100</y>
+     <width>221</width>
+     <height>31</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="passwordField">
+   <property name="geometry">
+    <rect>
+     <x>250</x>
+     <y>170</y>
+     <width>221</width>
+     <height>31</height>
+    </rect>
    </property>
   </widget>
  </widget>
