--- a/ui/AdminMain.ui
+++ b/ui/AdminMain.ui
@@ -6,12 +6,12 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1353</width>
-    <height>815</height>
+    <width>1423</width>
+    <height>623</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>CSU-VecMon</string>
+   <string>CSU-VeMon</string>
   </property>
   <property name="windowIcon">
    <iconset>
@@ -25,7 +25,7 @@
     <property name="geometry">
      <rect>
       <x>40</x>
-      <y>80</y>
+      <y>60</y>
       <width>321</width>
       <height>451</height>
      </rect>
@@ -131,16 +131,6 @@
       <string>Driver Type:</string>
      </property>
     </widget>
-    <widget class="QLineEdit" name="driver_typeValue">
-     <property name="geometry">
-      <rect>
-       <x>100</x>
-       <y>190</y>
-       <width>181</width>
-       <height>31</height>
-      </rect>
-     </property>
-    </widget>
     <widget class="QLabel" name="licenseLabel">
      <property name="geometry">
       <rect>
@@ -172,6 +162,16 @@
        <width>181</width>
        <height>31</height>
       </rect>
+     </property>
+     <property name="dateTime">
+      <datetime>
+       <hour>0</hour>
+       <minute>0</minute>
+       <second>0</second>
+       <year>2025</year>
+       <month>1</month>
+       <day>1</day>
+      </datetime>
      </property>
     </widget>
     <widget class="QLabel" name="licenseLabel_2">
@@ -209,6 +209,16 @@
        <height>31</height>
       </rect>
      </property>
+     <property name="dateTime">
+      <datetime>
+       <hour>0</hour>
+       <minute>0</minute>
+       <second>0</second>
+       <year>2025</year>
+       <month>1</month>
+       <day>1</day>
+      </datetime>
+     </property>
     </widget>
     <widget class="QLabel" name="licenseLabel_4">
      <property name="geometry">
@@ -236,14 +246,39 @@
       <string>Upload Photo</string>
      </property>
     </widget>
+    <widget class="QComboBox" name="driverTypeComboBox">
+     <property name="geometry">
+      <rect>
+       <x>100</x>
+       <y>190</y>
+       <width>181</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <item>
+      <property name="text">
+       <string>professional</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>non-professional</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>student</string>
+      </property>
+     </item>
+    </widget>
    </widget>
    <widget class="QFrame" name="framePicture">
     <property name="geometry">
      <rect>
-      <x>830</x>
-      <y>70</y>
-      <width>381</width>
-      <height>321</height>
+      <x>740</x>
+      <y>60</y>
+      <width>241</width>
+      <height>211</height>
      </rect>
     </property>
     <property name="frameShape">
@@ -255,10 +290,10 @@
     <widget class="QLabel" name="userPhoto">
      <property name="geometry">
       <rect>
-       <x>30</x>
+       <x>20</x>
        <y>20</y>
-       <width>321</width>
-       <height>281</height>
+       <width>201</width>
+       <height>171</height>
       </rect>
      </property>
      <property name="text">
@@ -272,9 +307,9 @@
    <widget class="QFrame" name="frameCSU">
     <property name="geometry">
      <rect>
-      <x>790</x>
-      <y>430</y>
-      <width>461</width>
+      <x>750</x>
+      <y>300</y>
+      <width>221</width>
       <height>181</height>
      </rect>
     </property>
@@ -287,70 +322,44 @@
     <widget class="QLabel" name="csuLabel">
      <property name="geometry">
       <rect>
-       <x>170</x>
+       <x>60</x>
        <y>140</y>
-       <width>131</width>
+       <width>101</width>
        <height>31</height>
       </rect>
      </property>
      <property name="font">
       <font>
        <family>MS Reference Sans Serif</family>
-       <pointsize>12</pointsize>
+       <pointsize>10</pointsize>
       </font>
      </property>
      <property name="text">
-      <string>CSU VecMon</string>
+      <string>CSU VeMon</string>
      </property>
     </widget>
-   </widget>
-   <widget class="QPushButton" name="buttonLogout">
-    <property name="geometry">
-     <rect>
-      <x>830</x>
-      <y>640</y>
-      <width>381</width>
-      <height>28</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <weight>75</weight>
-      <bold>true</bold>
-     </font>
-    </property>
-    <property name="autoFillBackground">
-     <bool>false</bool>
-    </property>
-    <property name="text">
-     <string>LOGOUT</string>
-    </property>
-    <property name="icon">
-     <iconset>
-      <normaloff>../images/logoutIcon.png</normaloff>../images/logoutIcon.png</iconset>
-    </property>
-   </widget>
-   <widget class="QLabel" name="csuLogo">
-    <property name="geometry">
-     <rect>
-      <x>980</x>
-      <y>440</y>
-      <width>121</width>
-      <height>121</height>
-     </rect>
-    </property>
-    <property name="lineWidth">
-     <number>0</number>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-    <property name="pixmap">
-     <pixmap>../images/csuLogo.png</pixmap>
-    </property>
-    <property name="scaledContents">
-     <bool>true</bool>
-    </property>
+    <widget class="QLabel" name="csuLogo">
+     <property name="geometry">
+      <rect>
+       <x>50</x>
+       <y>20</y>
+       <width>121</width>
+       <height>121</height>
+      </rect>
+     </property>
+     <property name="lineWidth">
+      <number>0</number>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+     <property name="pixmap">
+      <pixmap>../images/csuLogo.png</pixmap>
+     </property>
+     <property name="scaledContents">
+      <bool>true</bool>
+     </property>
+    </widget>
    </widget>
    <widget class="QFrame" name="frameInfo_2">
     <property name="enabled">
@@ -359,7 +368,7 @@
     <property name="geometry">
      <rect>
       <x>390</x>
-      <y>80</y>
+      <y>60</y>
       <width>321</width>
       <height>211</height>
      </rect>
@@ -460,7 +469,7 @@
     <property name="geometry">
      <rect>
       <x>390</x>
-      <y>370</y>
+      <y>300</y>
       <width>321</width>
       <height>161</height>
      </rect>
@@ -531,18 +540,190 @@
      </property>
     </widget>
    </widget>
-   <widget class="QPushButton" name="submitButton">
+   <widget class="QTableWidget" name="detailsTable">
     <property name="geometry">
      <rect>
-      <x>390</x>
-      <y>640</y>
-      <width>321</width>
-      <height>28</height>
+      <x>1010</x>
+      <y>60</y>
+      <width>391</width>
+      <height>211</height>
      </rect>
     </property>
-    <property name="text">
-     <string>Submit</string>
+    <property name="editTriggers">
+     <set>QAbstractItemView::NoEditTriggers</set>
     </property>
+    <column>
+     <property name="text">
+      <string>RFID</string>
+     </property>
+    </column>
+    <column>
+     <property name="text">
+      <string>Name</string>
+     </property>
+    </column>
+    <column>
+     <property name="text">
+      <string>Plate No.</string>
+     </property>
+    </column>
+   </widget>
+   <widget class="QFrame" name="functions">
+    <property name="geometry">
+     <rect>
+      <x>1010</x>
+      <y>300</y>
+      <width>391</width>
+      <height>161</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true"/>
+    </property>
+    <property name="frameShape">
+     <enum>QFrame::StyledPanel</enum>
+    </property>
+    <property name="frameShadow">
+     <enum>QFrame::Raised</enum>
+    </property>
+    <widget class="QPushButton" name="submitButton">
+     <property name="geometry">
+      <rect>
+       <x>30</x>
+       <y>20</y>
+       <width>151</width>
+       <height>28</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>10</pointsize>
+       <weight>75</weight>
+       <bold>true</bold>
+      </font>
+     </property>
+     <property name="styleSheet">
+      <string notr="true"/>
+     </property>
+     <property name="text">
+      <string>Submit</string>
+     </property>
+     <property name="icon">
+      <iconset>
+       <normaloff>../images/submit.svg</normaloff>../images/submit.svg</iconset>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="searchButton">
+     <property name="geometry">
+      <rect>
+       <x>210</x>
+       <y>20</y>
+       <width>151</width>
+       <height>28</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>10</pointsize>
+       <weight>75</weight>
+       <bold>true</bold>
+      </font>
+     </property>
+     <property name="styleSheet">
+      <string notr="true"/>
+     </property>
+     <property name="text">
+      <string>Search</string>
+     </property>
+     <property name="icon">
+      <iconset>
+       <normaloff>../images/search.svg</normaloff>../images/search.svg</iconset>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="updateButton">
+     <property name="geometry">
+      <rect>
+       <x>30</x>
+       <y>70</y>
+       <width>151</width>
+       <height>28</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>10</pointsize>
+       <weight>75</weight>
+       <bold>true</bold>
+      </font>
+     </property>
+     <property name="styleSheet">
+      <string notr="true"/>
+     </property>
+     <property name="text">
+      <string>Update</string>
+     </property>
+     <property name="icon">
+      <iconset>
+       <normaloff>../images/update.svg</normaloff>../images/update.svg</iconset>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="deleteButton">
+     <property name="geometry">
+      <rect>
+       <x>210</x>
+       <y>70</y>
+       <width>151</width>
+       <height>28</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>10</pointsize>
+       <weight>75</weight>
+       <bold>true</bold>
+      </font>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">background-color: #ff8183;</string>
+     </property>
+     <property name="text">
+      <string>Delete</string>
+     </property>
+     <property name="icon">
+      <iconset>
+       <normaloff>../images/delete.svg</normaloff>../images/delete.svg</iconset>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="buttonLogout">
+     <property name="geometry">
+      <rect>
+       <x>30</x>
+       <y>120</y>
+       <width>331</width>
+       <height>28</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>10</pointsize>
+       <weight>75</weight>
+       <bold>true</bold>
+      </font>
+     </property>
+     <property name="autoFillBackground">
+      <bool>false</bool>
+     </property>
+     <property name="styleSheet">
+      <string notr="true"/>
+     </property>
+     <property name="text">
+      <string>Logout</string>
+     </property>
+     <property name="icon">
+      <iconset>
+       <normaloff>../images/logoutIcon.png</normaloff>../images/logoutIcon.png</iconset>
+     </property>
+    </widget>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
@@ -550,7 +731,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1353</width>
+     <width>1423</width>
      <height>26</height>
     </rect>
    </property>
