--- a/ui/AdminMain.ui
+++ b/ui/AdminMain.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1423</width>
-    <height>623</height>
+    <width>1481</width>
+    <height>587</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -520,39 +520,11 @@
      </property>
     </widget>
    </widget>
-   <widget class="QTableWidget" name="detailsTable">
-    <property name="geometry">
-     <rect>
-      <x>1010</x>
-      <y>60</y>
-      <width>391</width>
-      <height>211</height>
-     </rect>
-    </property>
-    <property name="editTriggers">
-     <set>QAbstractItemView::NoEditTriggers</set>
-    </property>
-    <column>
-     <property name="text">
-      <string>RFID</string>
-     </property>
-    </column>
-    <column>
-     <property name="text">
-      <string>Name</string>
-     </property>
-    </column>
-    <column>
-     <property name="text">
-      <string>Plate No.</string>
-     </property>
-    </column>
-   </widget>
    <widget class="QFrame" name="functions">
     <property name="geometry">
      <rect>
-      <x>1010</x>
-      <y>300</y>
+      <x>1018</x>
+      <y>350</y>
       <width>391</width>
       <height>161</height>
      </rect>
@@ -570,8 +542,8 @@
      <property name="geometry">
       <rect>
        <x>30</x>
-       <y>20</y>
-       <width>151</width>
+       <y>70</y>
+       <width>331</width>
        <height>28</height>
       </rect>
      </property>
@@ -593,38 +565,11 @@
        <normaloff>../images/submit.svg</normaloff>../images/submit.svg</iconset>
      </property>
     </widget>
-    <widget class="QPushButton" name="searchButton">
-     <property name="geometry">
-      <rect>
-       <x>210</x>
-       <y>20</y>
-       <width>151</width>
-       <height>28</height>
-      </rect>
-     </property>
-     <property name="font">
-      <font>
-       <pointsize>10</pointsize>
-       <weight>75</weight>
-       <bold>true</bold>
-      </font>
-     </property>
-     <property name="styleSheet">
-      <string notr="true"/>
-     </property>
-     <property name="text">
-      <string>Search</string>
-     </property>
-     <property name="icon">
-      <iconset>
-       <normaloff>../images/search.svg</normaloff>../images/search.svg</iconset>
-     </property>
-    </widget>
     <widget class="QPushButton" name="updateButton">
      <property name="geometry">
       <rect>
        <x>30</x>
-       <y>70</y>
+       <y>20</y>
        <width>151</width>
        <height>28</height>
       </rect>
@@ -651,7 +596,7 @@
      <property name="geometry">
       <rect>
        <x>210</x>
-       <y>70</y>
+       <y>20</y>
        <width>151</width>
        <height>28</height>
       </rect>
@@ -705,13 +650,94 @@
      </property>
     </widget>
    </widget>
+   <widget class="QFrame" name="frame">
+    <property name="geometry">
+     <rect>
+      <x>1010</x>
+      <y>60</y>
+      <width>411</width>
+      <height>281</height>
+     </rect>
+    </property>
+    <property name="frameShape">
+     <enum>QFrame::StyledPanel</enum>
+    </property>
+    <property name="frameShadow">
+     <enum>QFrame::Raised</enum>
+    </property>
+    <widget class="QLineEdit" name="searchValue">
+     <property name="geometry">
+      <rect>
+       <x>12</x>
+       <y>10</y>
+       <width>281</width>
+       <height>31</height>
+      </rect>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="searchButton">
+     <property name="geometry">
+      <rect>
+       <x>300</x>
+       <y>10</y>
+       <width>101</width>
+       <height>28</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>10</pointsize>
+       <weight>75</weight>
+       <bold>true</bold>
+      </font>
+     </property>
+     <property name="styleSheet">
+      <string notr="true"/>
+     </property>
+     <property name="text">
+      <string>Search</string>
+     </property>
+     <property name="icon">
+      <iconset>
+       <normaloff>../images/search.svg</normaloff>../images/search.svg</iconset>
+     </property>
+    </widget>
+    <widget class="QTableWidget" name="detailsTable">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>50</y>
+       <width>391</width>
+       <height>211</height>
+      </rect>
+     </property>
+     <property name="editTriggers">
+      <set>QAbstractItemView::NoEditTriggers</set>
+     </property>
+     <column>
+      <property name="text">
+       <string>RFID</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>Name</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>Plate No.</string>
+      </property>
+     </column>
+    </widget>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1423</width>
+     <width>1481</width>
      <height>26</height>
     </rect>
    </property>
